--- a/tipos_estilos/exemplo2_teste/styles.css
+++ b/tipos_estilos/exemplo2_teste/styles.css
@@ -6,20 +6,20 @@
 
 body{
     font-family: Arial, sans-serif;
-    background-color:chocolate;
-    color:rgb(0, 0, 0);
+    background-color:rgb(255, 228, 254);
+    color:rgb(130, 0, 126);
     /*Garante que o body ocupe toda a altura da tela*/
     min-height: 100vh;
 }
 
 header{
-    background-color:burlywood;
+    background-color:rgb(207, 125, 203);
     padding: 20px;
-    color:brown;
+    color:rgb(155, 51, 150);
     text-align: center;
 }
 
-.logo{
+header .logo{
     /*uso do flebox para alinhar a logo e o titulo*/
     display: flex;
     /*Alinha verticalmete os itens da viv em questão*/
@@ -27,10 +27,68 @@ header{
     /*Centraliza os itens horizontalmente*/
     justify-content: center;
 
-    background-color:cadetblue;
+    /*background-color:cadetblue;*/
 }
 
-img{
+header .logo img{
     max-width: 75px;
     margin-right: 10px;
+    margin-bottom: 10px;
+}
+header .logo h1{
+    margin-bottom: 7px;
+}
+
+nav ul{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin-top: 7px;
+}
+nav ul li{
+    margin: 0 15px;
+}
+nav ul li a{
+    color:rgb(155, 51, 150);
+    text-decoration: none;
+    font-weight: bold;
+}
+nav ul li a:hover{
+    text-decoration: underline;
+}
+main{
+    padding: 20px;
+}
+main section{
+    margin-bottom: 40px;
+}
+#home{
+    background-color:rgb(233, 179, 231);
+    padding: 20px;
+    border-radius: 8px;
+    text-align: center;
+}
+#home h2{
+    color: rgb(164, 38, 160);
+}
+.eventos-container{
+    display: flex;
+    gap: 20px;
+}
+.eventos-item{
+    background-color: rgb(164, 96, 160);
+    color:rgb(254, 193, 252);
+    text-align: center;
+    padding: 10px;
+    width: 100%;
+    border-radius: 5px;
+}
+footer{
+    background-color: rgb(207, 125, 203);
+    padding: 10px;
+    text-align: center;
+    bottom: 0;
+    position: absolute;
+    position: fixed;
+    width: 100%; 
 }
