--- a/tipos_estilos/exemplo2_teste/styles.css
+++ b/tipos_estilos/exemplo2_teste/styles.css
@@ -85,10 +85,11 @@ main section{
 }
 footer{
     background-color: rgb(207, 125, 203);
-    padding: 10px;
+    padding: 15px 0;
     text-align: center;
     bottom: 0;
     position: absolute;
     position: fixed;
-    width: 100%; 
+    width: 100%;
+
 }
